--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "trenger ikke det",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:simpja/httpSnikkSnakk.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
